--- a/res/AdminLTE/AdminLTE.css
+++ b/res/AdminLTE/AdminLTE.css
@@ -5187,7 +5187,7 @@ table.text-center th {
   background-color: #00a65a !important;
 }
 .bg-navy {
-  background-color: #001f3f !important;
+  background-color: #222d32 !important; //dony
 }
 .bg-teal {
   background-color: #39cccc !important;
